--- a/app/assets/lang/en_US.json
+++ b/app/assets/lang/en_US.json
@@ -5,8 +5,8 @@
     "js": {
         "login": {
             "error": {
-                "invalidValue": "* Invalid Value",
-                "requiredValue": "* Required",
+                "invalidValue": "* Valeur non valide",
+                "requiredValue": "* Exigée",
                 "userMigrated": {
                     "title": "Error During Login:<br>Invalid Credentials",
                     "desc": "You've attempted to login with a migrated account. Try again using the account email as the username."
@@ -38,11 +38,11 @@
             "login": "LOGIN",
             "loggingIn": "LOGGING IN",
             "success": "SUCCESS",
-            "tryAgain": "Try Again"
+            "tryAgain": "Réessayer"
         },
         "landing": {
             "launch": {
-                "pleaseWait": "Please wait.."
+                "pleaseWait": "Veuillez patienter.."
             }
         }
     }
